--- a/css/estilos.css
+++ b/css/estilos.css
@@ -451,7 +451,7 @@ body {
 }
 
 @media (max-width: 1088px) {
-  .carousel-caption {
+  .carousel .carousel-inner .carousel-item .carousel-caption {
     font-size: 18px;
     padding-right: 25px;
     padding-left: 25px;
@@ -460,18 +460,18 @@ body {
     height: 170px;
     align-items: center;
   }
-  .carousel-caption h3 {
+  .carousel .carousel-inner .carousel-item .carousel-caption h3 {
     font-size: 14px;
   }
-  .carousel-caption h5 {
+  .carousel .carousel-inner .carousel-item .carousel-caption h5 {
     font-size: 12px;
   }
 }
 @media (max-width: 1000px) {
-  .carousel-item img {
+  .carousel .carousel-inner .carousel-item .carousel-item img {
     height: 170px;
   }
-  .carousel-caption {
+  .carousel .carousel-inner .carousel-item .carousel-caption {
     font-size: 16px;
     padding-right: 15px;
     padding-left: 15px;
@@ -480,20 +480,20 @@ body {
     height: 140px;
     align-items: flex-start;
   }
-  .carousel-caption h3 {
+  .carousel .carousel-inner .carousel-item .carousel-caption h3 {
     font-size: 12px;
   }
-  .carousel-caption h5 {
+  .carousel .carousel-inner .carousel-item .carousel-caption h5 {
     font-size: 12px;
   }
 }
 @media (max-width: 823px) {
-  .carousel-caption {
+  .carousel .carousel-inner .carousel-item .carousel-caption {
     background-color: #060709;
     color: #F0E9E9;
     height: 140px;
   }
-  .carousel-indicators {
+  .carousel .carousel-indicators {
     margin-bottom: 0px;
   }
 }
@@ -513,18 +513,18 @@ body {
   .d-none {
     display: block !important;
   }
-  .carousel-item {
+  .carousel .carousel-inner .carousel-item {
     margin-top: none;
   }
 }
 @media (max-width: 695px) {
-  .button1 {
+  .product div .button1 {
     padding: 8px 14px;
     border-radius: 4px;
     margin-right: 10px;
     font-size: 14px;
   }
-  .button2 {
+  .product div .button2 {
     padding: 8px 14px;
     border-radius: 4px;
     margin-right: 10px;
@@ -532,13 +532,13 @@ body {
   }
 }
 @media (max-width: 640px) {
-  .button1 {
+  .product div .button1 {
     padding: 6px 12px;
     border-radius: 4px;
     margin-right: 8px;
     font-size: 12px;
   }
-  .button2 {
+  .product div .button2 {
     padding: 6px 16px;
     border-radius: 4px;
     margin-right: 8px;
@@ -569,11 +569,11 @@ body {
   .top_pict3 p {
     font-size: 18px;
   }
-  .details-pole {
+  .list-of-details div .details-pole {
     width: 150px;
     height: auto;
   }
-  .list-of-details p {
+  .list-of-details div p {
     font-size: 14px;
   }
   .grid-pictures {
@@ -598,20 +598,20 @@ body {
     gap: 20px;
     margin-bottom: 15px;
   }
-  main section .collabs-title {
+  .collabs-title {
     font-size: 18px;
     font-weight: 150px;
     text-transform: uppercase;
   }
-  .robandy {
+  .container-intro .robandy1 .robandy {
     width: auto;
     height: 200px;
   }
-  .robandy1 h2 {
+  .container-intro .robandy1 h2 {
     font-size: 20px;
     font-style: bold;
   }
-  .robandy1 {
+  .container-intro .robandy1 {
     width: 70%;
     text-align: center;
   }
@@ -623,19 +623,27 @@ body {
   }
 }
 @media (max-width: 650px) {
-  .footer-section a {
+  .footer-container .footer-section .contact-section a {
     font-size: 14px;
     font-weight: none;
   }
-  footer div img {
+  footer .footer-container img {
     height: 30px;
     padding-right: 15px;
   }
-  .footer-section h5 {
+  .footer-container .footer-section .contact-section h5 {
     font-size: 14px;
   }
-  .contact-section h5 {
-    font-size: 14px;
+}
+@media screen and (max-width: 550px) {
+  .owners .container-intro {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 15px;
+  }
+  .robandy1 h2 {
+    font-size: 16px;
   }
 }
 @media (max-width: 538px) {
@@ -653,7 +661,7 @@ body {
   }
 }
 @media (max-width: 530px) {
-  .carousel-caption {
+  .carousel .carousel-inner .carousel-item .carousel-caption {
     font-size: 14px;
     gap: 0px;
   }
@@ -662,13 +670,13 @@ body {
   .formulario .form h2 {
     font-size: 18px;
   }
-  .subscribe1 {
+  .form .subscribe1 {
     font-size: 14px;
   }
-  body main section .formulario {
+  .formulario {
     font-size: 14px;
-    padding: 30px;
-    margin-inline: 200px;
+    padding: 10px;
+    margin-inline: 10px;
   }
 }
 @media screen and (max-width: 450px) {
@@ -682,19 +690,8 @@ body {
   .title-details {
     font-size: 16px;
   }
-  .list-of-details p:nth-child(n) {
+  .list-of-details div p:nth-child(n) {
     width: 90%;
-  }
-}
-@media screen and (max-width: 440px) {
-  .container-intro {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 15px;
-  }
-  .robandy1 h2 {
-    font-size: 16px;
   }
 }
 @media (max-width: 414px) {
@@ -714,6 +711,19 @@ body {
   .main-text p {
     font-size: 20px;
     margin-left: 0;
+  }
+}
+@media screen and (max-width: 365px) {
+  .formulario .form h2 {
+    font-size: 16px;
+  }
+  .form .subscribe1 {
+    font-size: 12px;
+  }
+  .formulario {
+    font-size: 12px;
+    padding: 5px;
+    margin-inline: 5px;
   }
 }
 
