--- a/scss/paginas/_aboutus.scss
+++ b/scss/paginas/_aboutus.scss
@@ -22,23 +22,25 @@
 .owners {
     .paragraphikigai {
         text-align: center;
-        padding: 50px;
+        padding: 30px;
         margin-top: 10px;
     }
 
     .container-intro {
         display: flex;
-        justify-content: space-evenly;
-        margin-top: 10px;
-        margin-bottom: 30px;
-
+        justify-content: center;
+        margin-bottom: 20px;
+        gap: 100px;
+        
         .robandy1 {
-            width: 30%;
+            max-width: 20%;
             text-align: center;
-
+            height: 500px;
+            padding-bottom: 20px;
+            
             .robandy {
-                width: 250px;
-                height: 300px;
+                width: 100%;
+                height: auto;
                 border-radius: 10px;
             }
 
@@ -46,22 +48,30 @@
                 font-size: 24px;
                 padding-top: 10px;
             }
+            p{
+                font-size: 16px;
+            }
         }
     }
 }
+
 
 .grid-pictures {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     grid-template-rows: repeat(5, 200px);
     gap: 5px;
-    margin: 30px 40px 0;
+    margin: 20px 70px;
 
     .grid-item {
         img {
             width: 100%;
             height: 100%;
             object-fit: cover;
+            transition: 0.5s;
+            &:hover{
+                transform: scale(120%);
+            }
         }
 
         &.img-1,
