--- a/css/estilos.css
+++ b/css/estilos.css
@@ -35,7 +35,7 @@ body {
   list-style: none;
   padding: 0;
 }
-.footer-container .footer-section ul a {
+.footer-container .footer-section ul li a {
   text-transform: uppercase;
   text-decoration: none;
   color: #fafafa;
@@ -44,7 +44,7 @@ body {
   text-align: center;
   transition: 0.6s;
 }
-.footer-container .footer-section ul a:hover {
+.footer-container .footer-section ul li a:hover {
   text-decoration: underline;
 }
 
